removed unnecessary code